bug fixes with video sizing and shift

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3975,7 +3975,6 @@ input, select, textarea {
 				border-style: solid;
 				border-top-width: 2px;
 				text-align: center;
-				min-height: fit;
 			}
 
 				#main > .posts > article > :last-child {
